# CoreGene-test

./: .gitignore  .gitmodules  CMakeLists.txt  QUICKSTART.md  README.md  TESTING_NOTES.md  blend_test.cpp  clip_plane_fog_test.cpp  create_test.ps1  create_test.sh  main.cpp  projective_texture_test.cpp  remove_test.ps1  remove_test.sh  renderstate_component_test.cpp  skybox_test.cpp  stencil_test.cpp  template_test.cpp
test/basic/: simple_test.cpp
test/camera_projection/: clip_plane_fog_test.cpp  dual_camera_test.cpp
test/framebuffer/: framebuffer_basic_test.cpp  framebuffer_postprocess_test.cpp
test/materials/: skybox_test.cpp  specular_gloss_test.cpp
test/rendering_pipeline/: depth_test.cpp
